feat: add endpoint for adding specified user to team
